--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Calculadora - Revisão</string>
+    <string name="app_name"></string>
     <string name="Calculadora">CALCULADORA</string>
     <string name="Insirir">INSIRA O VALOR</string>
     <string name="outro">OUTRO VALOR</string>
